public/styles.css
#my-form {
    margin-top: -80px;
}
@media only screen and (max-width: 660px) {
    #my-form {
                margin-top: 0px;
                 
    }
    #my-form * {
        font-size: 32px;
        line-height: 80%
    }
    #my-form input {
        font-size: 24px;
        max-width: 300px;
    }
}
#my-form * {
    font-family: 'Inconsolata', monospace;
}

#my-form input {
    color: white;
    text-align: center;
    font-size: 54px;
    background-color: #4457c0;;
    border: 0px;
    border-bottom: 4px solid white;
}


.my-side-menu button {
    text-align: left;
    width: 70%;
    margin-left : 80px;
    border-bottom: 0px;
    border-radius: 0px;
}
.my-side-menu button.first {
}
.my-side-menu button.last {
    border-bottom: 1px solid #1763e9;
}

.my-side-panel {
    font-family: 'Cabin', sans-serif;
    font-size: 16px;
    display: flex;
    align-items: stretch;
    align-content: stretch;
    flex-wrap: wrap;
    box-shadow: 0 7px 11px rgba(0,0,0,0.20), 0 11px 9px rgba(0,0,0,0.16);
}

.my-side-panel ul {
    list-style: circle outside none;
    margin-left: -24px;
}

.my-side-panel h4 {
    font-family: 'Cabin', sans-serif;
    font-size: 16px;
    color: #000000 !important;
    font-weight: bold;
}

.my-side-panel div {
    padding: 30px;
    padding-right: 70px;
    margin-right: 20px;

}
.my-side-panel a {
    font-family: 'cabin', sans-serif;
    text-decoration: underline;
    font-weight: normal;
    color: #000000 !important;
}

.list-group-item {
    display: flex;
    justify-content: space-between;
    margin-bottom: 10px;
    border: 2px solid black;
    padding: 20px;
}

.list-group-item button {
    width: 100px;
}

.modal-backdrop
{
        opacity:0.5 !important;
}

.little-right-margin {
    margin-rigth: 50px;
}
.navbar-logo-img {
    margin-top: -30px !important;
}
.normalh2::after {
    content: "";
}
.normalh2 {
    margin-top: -40px;
}


.form-main select
{
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    outline: none;
    display: block;
    width: 100%;
    padding: 7px;
    border: none;
    border-bottom: 1px solid #ddd;
    background: transparent;
    margin-bottom: 10px;
    font: 16px Arial, Helvetica, sans-serif;
    height: 45px;
}
.form-main textarea{
    resize:none;
    overflow: hidden;
}
.form-main input[type="button"],
.form-main input[type="submit"]{
    -moz-box-shadow: inset 0px 1px 0px 0px #45D6D6;
    -webkit-box-shadow: inset 0px 1px 0px 0px #45D6D6;
    box-shadow: inset 0px 1px 0px 0px #45D6D6;
    background-color: #2CBBBB;
    border: 1px solid #27A0A0;
    display: inline-block;
    cursor: pointer;
    color: #FFFFFF;
    font-family: 'Open Sans Condensed', sans-serif;
    font-size: 14px;
    padding: 8px 18px;
    text-decoration: none;
    text-transform: uppercase;
}
.form-main input[type="button"]:hover,
.form-main input[type="submit"]:hover {
    background:linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
    background-color:#34CACA;
}

